<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlue"
    tools:context=".MainActivity">



    <android.support.constraint.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_description"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_gravity="center"/>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            />
    </android.support.constraint.ConstraintLayout>
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:columnOrderPreserved="true"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/trim_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_scissor_yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trim_audio"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/merge_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_merge_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/merge_audio"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mix_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_mix_grey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mix_audio"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_ringtone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_contact_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contacts_ringtone"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_my_audio_yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_audio"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_settings_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>


    </GridLayout>


</android.support.constraint.ConstraintLayout>