<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imageViewPlayPauseReorder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_play" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutReorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewClearReorder"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayPauseReorder"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFileNameReorder"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:text="@string/music_file_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewArtistReorder"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/artist_name"
            app:layout_constraintEnd_toStartOf="@+id/textViewDurationReorder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFileNameReorder" />

        <TextView
            android:id="@+id/textViewDurationReorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFileNameReorder" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewClearReorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_clear" />
</android.support.constraint.ConstraintLayout>